# squirrel3-rs

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
src/: lib.rs
